setup fedora during mvn lifecycle and deployed to JBoss (skip with skipITs); URL to fedora has changed to localhost:8080
git-svn-id: http://escidev5.fiz-karlsruhe.de:8888/prototype/eSciDocCore@40654 5c398c58-3d0a-0410-a38c-d0825f6816e0