@@ -20,11 +20,140 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<escidoc.url>http://localhost:8080</escidoc.url>
+		<fedora.home>${project.build.directory}/fedora</fedora.home>
 	</properties>
+
+	<!-- Setting up the integration test infrastructure is a little bit complex 
+		and confusing. Following steps are required in the defined order: 1. Setup 
+		escidoc-core and fedora (both running within one JBoss). 1.1 drop databases 
+		for fedora (fedora3 and riTriples), drop role 1.2 use fcrepo-installer to 
+		create fedora.war and the fedora home directory 1.3 replace fedora config 
+		file (fedora.fcfg, because not all parameter could be set with installer) 
+		1.4 Install JBoss (currently is a prepared zip used where all configuration 
+		files and replaces jars are included. One can change this later on to a vanilla 
+		JBoss and replace jars and config during maven build.) 1.5 copy fedora.war 
+		into install directory of JBoss 1.6 start JBoss and deploy in same step with 
+		cargo2 plugin the escidoc ear 1.7 ingest FOXML files (escidocs persistent 
+		objects) 2. generate sources from wsdl files (these are retrieved from the 
+		running escidoc) 3. compile 4. run integration tests -->
 
 	<build>
 		<outputDirectory>target/test-classes</outputDirectory>
 		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sql-maven-plugin</artifactId>
+				<version>1.3</version>
+				<dependencies>
+					<!-- specify the dependent jdbc driver here -->
+					<dependency>
+						<groupId>postgresql</groupId>
+						<artifactId>postgresql</artifactId>
+						<version>${jdbc.postgresql.version}</version>
+					</dependency>
+				</dependencies>
+				<!-- common configuration shared by all executions -->
+				<configuration>
+					<driver>org.postgresql.Driver</driver>
+					<url>jdbc:postgresql://localhost:5432/postgres</url>
+					<!-- use your settings.xml to configure username and password -->
+					<settingsKey>escidoc-core-db-admin</settingsKey>
+					<skip>${skipITs}</skip>
+				</configuration>
+				<executions>
+					<execution>
+						<id>drop-db-before-compile</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<!-- need another database to drop the targeted one -->
+							<url>jdbc:postgresql://localhost:5432/postgres</url>
+							<autocommit>true</autocommit>
+							<sqlCommand>DROP DATABASE "fedora3"</sqlCommand>
+							<!-- ignore error when database is not avaiable -->
+							<onError>continue</onError>
+						</configuration>
+					</execution>
+					<execution>
+						<id>drop-tripledb-before-compile</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<!-- need another database to drop the targeted one -->
+							<url>jdbc:postgresql://localhost:5432/postgres</url>
+							<autocommit>true</autocommit>
+							<sqlCommand>DROP DATABASE "riTriples"</sqlCommand>
+							<!-- ignore error when database is not avaiable -->
+							<onError>continue</onError>
+						</configuration>
+					</execution>
+					<execution>
+						<id>drop-role-before-compile</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<!-- need another database to drop the targeted one -->
+							<url>jdbc:postgresql://localhost:5432/postgres</url>
+							<autocommit>true</autocommit>
+							<sqlCommand>DROP ROLE "fedoraAdmin"</sqlCommand>
+							<!-- ignore error when database is not avaiable -->
+							<onError>continue</onError>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>create-role</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<url>jdbc:postgresql://localhost:5432/postgres</url>
+							<!-- no transaction -->
+							<autocommit>true</autocommit>
+							<sqlCommand>CREATE ROLE "fedoraAdmin" LOGIN PASSWORD
+								'fedoraAdmin'
+								VALID
+								UNTIL 'infinity';</sqlCommand>
+						</configuration>
+					</execution>
+					<execution>
+						<id>create-db</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<url>jdbc:postgresql://localhost:5432/postgres</url>
+							<!-- no transaction -->
+							<autocommit>true</autocommit>
+							<sqlCommand>CREATE DATABASE "fedora3" WITH ENCODING='UTF8'
+								OWNER="fedoraAdmin"</sqlCommand>
+						</configuration>
+					</execution>
+					<execution>
+						<id>create-mpt-db</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<url>jdbc:postgresql://localhost:5432/postgres</url>
+							<!-- no transaction -->
+							<autocommit>true</autocommit>
+							<sqlCommand>CREATE DATABASE "riTriples" WITH ENCODING='SQL_ASCII'
+								OWNER="fedoraAdmin" TEMPLATE=template0</sqlCommand>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
@@ -43,19 +172,54 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>wagon-maven-plugin</artifactId>
+				<version>1.0-beta-3</version>
+				<executions>
+					<execution>
+						<id>deploy-fedora-to-jboss</id>
+						<phase>initialize</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<skip>${skipITs}</skip>
+							<source>file://${project.build.directory}/fedora/install/</source>
+							<includes>fedora.war</includes>
+							<target>file://${project.build.directory}/installs/jboss-4.2.3.GA.escidoc-core-09/jboss-4.2.3.GA/server/default/deploy/</target>
+						</configuration>
+					</execution>
+					<execution>
+						<id>deploy-fedora-config</id>
+						<phase>initialize</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<skip>${skipITs}</skip>
+							<source>file://${basedir}/src/test/resources/fedora</source>
+							<includes>fedora.fcfg</includes>
+							<target>file://${project.build.directory}/fedora/server/config</target>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>axistools-maven-plugin</artifactId>
 				<executions>
 					<execution>
 						<id>wsdl2java</id>
-						<phase>generate-sources</phase>
+						<phase>generate-resources</phase>
 						<goals>
 							<goal>wsdl2java</goal>
 						</goals>
 					</execution>
 				</executions>
 				<configuration>
+					<skip>${skipITs}</skip>
 					<testCases>false</testCases>
 					<serverSide>true</serverSide>
 					<noImports>true</noImports>
@@ -345,6 +509,7 @@
 					</execution>
 				</executions>
 				<configuration>
+					<skip>${skipITs}</skip>
 					<source>1.6</source>
 					<target>1.6</target>
 					<showDeprecation>true</showDeprecation>
@@ -365,13 +530,13 @@
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>junit</groupId>
-				        <artifactId>junit</artifactId>
-                        <version>${junit.version}</version>
-                    </dependency>
-                </dependencies>
+				<dependencies>
+					<dependency>
+						<groupId>junit</groupId>
+						<artifactId>junit</artifactId>
+						<version>${junit.version}</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 
 			<plugin>
@@ -414,13 +579,13 @@
 					<forkMode>always</forkMode>
 					<argLine>-Xmx1624m -XX:MaxPermSize=256m</argLine>
 				</configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>junit</groupId>
-				        <artifactId>junit</artifactId>
-                        <version>${junit.version}</version>
-                    </dependency>
-                </dependencies>
+				<dependencies>
+					<dependency>
+						<groupId>junit</groupId>
+						<artifactId>junit</artifactId>
+						<version>${junit.version}</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
@@ -428,30 +593,42 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.escidoc</groupId>
+			<artifactId>testdata</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>org.escidoc</groupId>
+			<artifactId>fcrepo-installer</artifactId>
+			<version>${fcrepo.version}</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.escidoc</groupId>
 			<artifactId>escidoc-core</artifactId>
 			<version>trunk-SNAPSHOT</version>
 			<type>ear</type>
 		</dependency>
-        <dependency>
-            <groupId>eSciDocCore</groupId>
-            <artifactId>common</artifactId>
-            <type>ejb</type>
-        </dependency>
-        <!-- Spring Framework -->
-        <dependency>
+		<dependency>
+			<groupId>eSciDocCore</groupId>
+			<artifactId>common</artifactId>
+			<type>ejb</type>
+		</dependency>
+		<!-- Spring Framework -->
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-            <scope>test</scope>
+			<scope>test</scope>
 		</dependency>
-        <dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
-            <scope>test</scope>
+			<scope>test</scope>
 		</dependency>
-        <dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-            <scope>test</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -463,18 +640,19 @@
 			<artifactId>httpcore</artifactId>
 			<scope>test</scope>
 		</dependency>
-        <!-- TODO: Remove as soon as all external libraries (Fedora) migration to new http client. -->
-        <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <scope>test</scope>
+		<!-- TODO: Remove as soon as all external libraries (Fedora) migration 
+			to new http client. -->
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<scope>test</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
 					<artifactId>commons-logging</artifactId>
 				</exclusion>
 			</exclusions>
-        </dependency>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.axis</groupId>
 			<artifactId>axis</artifactId>
@@ -503,10 +681,10 @@
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
-						<groupId>org.apache.activemq</groupId>
-						<artifactId>activemq-all</artifactId>
-					</exclusion>
-				</exclusions>
+					<groupId>org.apache.activemq</groupId>
+					<artifactId>activemq-all</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.fcrepo</groupId>
@@ -524,9 +702,9 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-    		<groupId>fedora-commons</groupId>
-    		<artifactId>fedora-rest-client</artifactId>
-    		<version>0.1.3.1</version>
+			<groupId>fedora-commons</groupId>
+			<artifactId>fedora-rest-client</artifactId>
+			<version>0.1.3.1</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -618,11 +796,11 @@
 					<plugin>
 						<groupId>org.codehaus.cargo</groupId>
 						<artifactId>cargo-maven2-plugin</artifactId>
-						<version>1.0.3</version>
+						<version>1.0.6</version>
 						<executions>
 							<execution>
 								<id>install</id>
-								<phase>initialize</phase>
+								<phase>validate</phase>
 								<goals>
 									<goal>install</goal>
 								</goals>
@@ -646,13 +824,14 @@
 							</execution>
 						</executions>
 						<configuration>
+							<skip>${skipITs}</skip>
 							<container>
 								<containerId>jboss42x</containerId>
 								<timeout>240000</timeout>
 								<zipUrlInstaller>
-									<url>http://escidev5:8888/files/jboss-4.2.3.GA.escidoc-core-08.zip</url>
-									<!-- url>http://escidev5:8888/files/jboss-4.2.3.GA.zip</url -->
-									<installDir>${installDir}</installDir>
+									<url>http://escidev5:8888/files/jboss-4.2.3.GA.escidoc-core-09.zip</url>
+									<!-- url>http://escidev5:8888/files/jboss-4.2.3.GA-jdk6.zip</url -->
+									<installDir>${project.build.directory}/installs</installDir>
 								</zipUrlInstaller>
 								<output>${project.build.directory}/jboss42x/container.log</output>
 								<append>false</append>
@@ -675,12 +854,21 @@
 								<deployables>
 									<deployable>
 										<groupId>org.escidoc</groupId>
+										<artifactId>testdata</artifactId>
+										<type>war</type>
+										<properties>
+          									<context>testdata</context>
+        								</properties>
+									</deployable>
+									<deployable>
+										<groupId>org.escidoc</groupId>
 										<artifactId>escidoc-core</artifactId>
 										<type>ear</type>
 										<pingURL>${escidoc.url}/adm/admin/get-repository-info</pingURL>
 									</deployable>
 								</deployables>
 								<configfiles>
+									<!-- eSciDoc configuration files -->
 									<configfile>
 										<file>${basedir}/../data/jboss/server/default/conf/escidoc-core-log4j.xml</file>
 										<file>${basedir}/../data/jboss/server/default/conf/escidoc-core.properties</file>
@@ -810,7 +998,6 @@
 										<file>${basedir}/../data/jboss/server/default/conf/search/dic/token.sen</file>
 										<todir>conf/search/dic</todir>
 									</configfile>
-
 									<configfile>
 										<file>${basedir}/../data/jboss/server/default/conf/tme/jhove.conf</file>
 										<todir>conf/tme</todir>
@@ -827,7 +1014,7 @@
 		<profile>
 			<id>ingest-into-fedora</id>
 			<activation>
-				<activeByDefault>false</activeByDefault>
+				<activeByDefault>true</activeByDefault>
 			</activation>
 
 			<build>
@@ -835,28 +1022,62 @@
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.1</version>
+						<version>1.2</version>
 						<executions>
 							<execution>
-								<phase>pre-integration-test</phase>
+								<id>ingest-fedora-resources</id>
+								<phase>generate-sources</phase>
 								<goals>
 									<goal>exec</goal>
 								</goals>
+								<configuration>
+									<skip>${skipITs}</skip>
+									<executable>java</executable>
+									<mainClass>org.fcrepo.client.utility.ingest.Ingest</mainClass>
+									<workingDirectory>src/test/resources/</workingDirectory>
+									<arguments>
+										<argument>-Xms64m</argument>
+										<argument>-Xmx96m</argument>
+
+										<argument>-classpath</argument>
+										<argument>${fedora.home}/client/bin:${fedora.home}/client/fcrepo-client-admin-${fcrepo.version}.jar</argument>
+										<argument>-Djava.endorsed.dirs=${fedora.home}/client/lib</argument>
+										<argument>-Djavax.net.ssl.trustStore=${fedora.home}/client/truststore</argument>
+										<argument>-Djavax.net.ssl.trustStorePassword=tomcat</argument>
+										<argument>-Djavax.xml.parsers.DocumentBuilderFactory=org.apache.xerces.jaxp.DocumentBuilderFactoryImpl</argument>
+										<argument>-Djavax.xml.parsers.SAXParserFactory=org.apache.xerces.jaxp.SAXParserFactoryImpl</argument>
+										<argument>-Dfedora.home=${fedora.home}</argument>
+
+										<argument>org.fcrepo.client.utility.ingest.Ingest</argument>
+										<argument>d</argument>
+										<argument>examples/</argument>
+										<argument>info:fedora/fedora-system:FOXML-1.1</argument>
+										<argument>localhost:8080</argument>
+										<argument>fedoraAdmin</argument>
+										<argument>fedoraAdmin</argument>
+										<argument>http</argument>
+
+									</arguments>
+									<outputFile>${project.build.directory}/fcrepo-ingest.log</outputFile>
+								</configuration>
+							</execution>
+							<execution>
+								<id>install-fedora</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>java</executable>
+									<arguments>
+										<argument>-jar</argument>
+										<argument>${settings.localRepository}/org/escidoc/fcrepo-installer/${fcrepo.version}/fcrepo-installer-${fcrepo.version}.jar</argument>
+										<argument>src/test/resources/fedora/install.properties</argument>
+									</arguments>
+									<outputFile>${project.build.directory}/fcrepo-install-error.log</outputFile>
+								</configuration>
 							</execution>
 						</executions>
-						<configuration>
-							<executable>$FEDORA_HOME/client/bin/fedora-ingest.sh</executable>
-							<workingDirectory>src/test/resources/</workingDirectory>
-							<arguments>
-								<argument>d</argument>
-								<argument>examples/</argument>
-								<argument>info:fedora/fedora-system:FOXML-1.1</argument>
-								<argument>localhost:8082</argument>
-								<argument>fedoraAdmin</argument>
-								<argument>fedoraAdmin</argument>
-								<argument>http</argument>
-							</arguments>
-						</configuration>
 					</plugin>
 				</plugins>
 			</build>
